--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>api-gateway</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
